# AstrobinCSV

./: .gitignore  CMakeLists.txt  bundle_for_windows.zsh  how_it_works.md  readme.md
resources/icons/: AstrobinCSV.icns  AstrobinCSV.rc
src/: acquisitiontableview.cpp  acquisitiontableview.h  debuglogger.cpp  debuglogger.h  filterwebscraper.cpp  filterwebscraper.h  frameresolverworker.cpp  frameresolverworker.h  main.cpp  mainwindow.cpp  mainwindow.h  masterfilecache.h  xisfheaderreader.cpp  xisfheaderreader.h  xisfmasterframereader.cpp  xisfmasterframereader.h  xisfresolveworker.cpp  xisfresolveworker.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  copycsv.cpp  copycsv.h  debugresultdialog.cpp  debugresultdialog.h  managefilters.cpp  managefilters.h  managelocations.cpp  managelocations.h  managetargets.cpp  managetargets.h
src/logparser/: calibrationlogparser.cpp  calibrationlogparser.h  logparserbase.h  pixinsightlogparser.cpp  pixinsightlogparser.h  sirillogparser.cpp  sirillogparser.h
src/models/: acquisitionframe.h  acquisitiongroup.h  acquisitionrow.h  csvtablemodel.cpp  csvtablemodel.h  framecalibration.h  integrationgroup.h  targetgroup.h
src/settings/: appsettings.cpp  appsettings.h
